# pacman-repo-builder

./: .gitignore  .yamllint.yml  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
ci/github-actions/: expose-release-artifacts.sh
ci/github-actions/arch-run/: Dockerfile  action.yml  pacman.conf  run.bash
src/: srcinfo.rs  utils.rs
src/args/: outdated.rs
src/cmd/: init_aur_builder.rs
src/manifest/: arch_filter.rs  build_metadata.rs
src/srcinfo/database/: package_file_base_names.rs
src/status/: code.rs
src/utils/: clone_aur.rs  create_makepkg_command.rs  custom_makepkg.rs
