[package]
name = "pacman-repo-builder"
description = "Build a custom pacman repository from a collection of PKGBUILD directories"
version = "0.0.0"
edition = "2021"
readme = "README.md"
license = "GPL-3.0"
documentation = "https://github.com/LizardByte/pacman-repo-builder/blob/master/README.md"
repository = "https://github.com/LizardByte/pacman-repo-builder.git"
keywords = [
  "pacman",
  "arch",
  "archlinux",
  "pkgbuild",
]
categories = ["command-line-utilities"]
include = [
  "/src",
  "/Cargo.toml",
  "/README.md",
  "/LICENSE.md",
]

[lib]
name = "pacman_repo_builder"
path = "src/lib.rs"

[[bin]]
name = "build-pacman-repo"
path = "src/main.rs"

[dependencies]
argh = "^0.1.12"
alpm = "^4.0.1"
command-extra = "^1.0.0"
git2 = "^0.20.0"
hex_fmt = "^0.3.0"
hex-literal = "^0.4.1"
indexmap = "^2.2.5"
itertools = "^0.14.0"
num-bigint = "^0.4.6"
num-traits = "^0.2.19"
pacmanconf = "^3.0.0"
petgraph = "^0.7.1"
pipe-trait = "^0.4.0"
rayon = "^1.10.0"
reflink = "^0.1.3"
serde_yaml = "^0.9.34"
sha-1 = "^0.10.1"
smart-default = "^0.7.1"

[dependencies.serde]
version = "^1.0.214"
features = ["derive"]

[dev-dependencies]
fs_extra = "^1.2.0"
pretty_assertions = "^1.4.1"
tempfile = "^3.13.0"

[profile.release]
opt-level = "s"
